--- a/App.WebApplication/App.WebApplication.csproj
+++ b/App.WebApplication/App.WebApplication.csproj
@@ -27,10 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <UpToDateCheckInput Remove="Views\Shared\Components\Pager\Default.cshtml" />
   </ItemGroup>
 
@@ -41,6 +37,8 @@
   <ItemGroup>
     <None Include="Views\Contact\Edit.cshtml" />
     <None Include="Views\Contact\Index.cshtml" />
+    <None Include="Views\Promotion\Edit.cshtml" />
+    <None Include="Views\Promotion\Index.cshtml" />
     <None Include="wwwroot\js\jquery-validation-unobtrusive\jquery.validate.unobtrusive.js" />
     <None Include="wwwroot\js\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
     <None Include="wwwroot\js\jquery-validation\dist\additional-methods.js" />
@@ -51,6 +49,10 @@
     <None Include="wwwroot\js\jquery\dist\jquery.js" />
     <None Include="wwwroot\js\jquery\dist\jquery.min.js" />
     <None Include="wwwroot\js\jquery\dist\jquery.min.map" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\SlideImage\" />
   </ItemGroup>
 
 </Project>
